[gd_scene load_steps=2 format=3 uid="uid://dnn0td63e2pqo"]

[ext_resource type="Script" uid="uid://c1rexrtn01op5" path="res://scripts/ui/pause_menu.gd" id="1_hybx1"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hybx1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PauseLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume Game"

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit to Main Menu"

[node name="SaveSlotPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="SaveSlotPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 36.0
grow_horizontal = 2
text = "Select Save Slot"
horizontal_alignment = 1

[node name="SlotContainer" type="VBoxContainer" parent="SaveSlotPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Slot0" type="Button" parent="SaveSlotPanel/SlotContainer"]
layout_mode = 2
text = "Slot 0 - Empty"
alignment = 0

[node name="Slot1" type="Button" parent="SaveSlotPanel/SlotContainer"]
layout_mode = 2
text = "Slot 1 - Empty"
alignment = 0

[node name="Slot2" type="Button" parent="SaveSlotPanel/SlotContainer"]
layout_mode = 2
text = "Slot 2 - Empty"
alignment = 0

[node name="Slot3" type="Button" parent="SaveSlotPanel/SlotContainer"]
layout_mode = 2
text = "Slot 3 - Empty"
alignment = 0

[node name="Slot4" type="Button" parent="SaveSlotPanel/SlotContainer"]
layout_mode = 2
text = "Slot 4 - Empty"
alignment = 0

[node name="ConfirmButton" type="Button" parent="SaveSlotPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Save"

[node name="CancelButton" type="Button" parent="SaveSlotPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "Cancel"

[connection signal="pressed" from="SaveSlotPanel/CancelButton" to="." method="_on_cancel_button_pressed"]
